--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-req"
-version = "0.4.18"
+version = "0.4.19"
 edition = "2021"
 license = "MIT"
 
@@ -10,6 +10,7 @@ chrono = "0.4"
 futures = "0.3"
 once_cell = "1.18"
 url = "2.5.4"
+rustc_version = "0.4.1"
 
 [dependencies.pyo3]
 version = "0.20"
