--- a/.github/workflows/test-rusty-req.yml
+++ b/.github/workflows/test-rusty-req.yml
@@ -13,6 +13,8 @@ on:
           - '3.10'
           - '3.11'
           - '3.12'
+          - '3.13'
+
       platform:
         description: '要测试的平台'
         required: true
@@ -32,7 +34,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout repository
