--- a/.github/workflows/performance_benchmark.yml
+++ b/.github/workflows/performance_benchmark.yml
@@ -13,30 +13,30 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: 启动 httpbin Docker 服务
+    - name: Start httpbin Docker service
       run: |
         docker run -d --name httpbin -p 8080:80 kennethreitz/httpbin:latest
-        # 等待服务启动
+        # Wait for service to start
         sleep 10
-        # 验证服务是否正常运行
+        # Verify service is running
         curl -f http://localhost:8080/status/200
     
-    - name: 设置 Python 环境
+    - name: Set up Python environment
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
-    - name: 安装依赖
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install rusty-req aiohttp httpx requests psutil
     
-    - name: 运行性能测试
+    - name: Run performance tests
       run: python tests/performance_test.py
       env:
         HTTPBIN_URL: http://localhost:8080
     
-    - name: 停止 httpbin 服务
+    - name: Stop httpbin service
       run: |
         docker stop httpbin
         docker rm httpbin
